Remove stylist quote on mobile; Fix about barbershop image spacing on mobile

--- a/web/app/themes/artandscience/assets/styles/pages/_about.scss
+++ b/web/app/themes/artandscience/assets/styles/pages/_about.scss
@@ -117,7 +117,10 @@
       }
     }
     .image {
+      margin-top: $padding;
+
       @include media-md {
+        margin-top: 0;
         width: 40%;
         float: left;
       }
